# TestPython

./: README.md  pyproject.toml
poetry-sub/: pyproject.toml
poetry-sub/poetry_sub/: my_fun.py
poetry-sub/tests/: test_my_fun.py
tests/: test_main.py
