[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["ili101 <zoby101@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry-sub = {path = "poetry-sub"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
