[tool.poetry]
name = "poetry-sub"
version = "0.1.0"
description = ""
authors = ["ili101 <zoby101@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_sub"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
